2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Include <rtems/btimer.h>.
	Fix benchmark_timer_read() definition.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspgetworkarea.c: Removed file.
	* Makefile.am, bsp_specs, start/start.S, startup/bspstart.c,
	libnds/include/nds/jtypes.h, libnds/source/arm9/gurumeditation.c,
	libnds/source/common/interruptDispatcher.S,
	libnds/source/common/interrupts.c, startup/linkcmds: Use linker
	command base file.

2010-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/dswifi/arm9/makefile: Workaround for GCC bug 38644.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/nds.cfg, Makefile.am, dswifi/arm7/makefile: Use VFP
	floating point model.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/console.c: Fix warnings.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* startup/bspstart.c: Fix warning.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, clock/clock.c, fb/fb.c, irq/irq.c, sound/sound.c,
	startup/bspstart.c, touchscreen/touchscreen.c, wifi/wifi.c: make
	irq data types consistent

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* start/start.S: Verify boot_card() is passed a NULL.

2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Let nds_getch return "int". Remove casts.

2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* block/block.c: Adjust prototype mismatches.
	* Makefile.am: Remove -Dcaddr_t=uint32_t.

2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* dswifi/arm9/source/wifi_arm9.c: Add missing prototypes.
	* console/console.c (nds_write): Adjust prototype.

2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* dswifi/arm7/source/wifi_arm7.c, dswifi/arm7/source/wifi_arm7.h,